--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,10 @@
+---
+import Header from "@components/Header.astro";
+import "@styles/global.css";
+
+const { pageTitle = "FCSC" } = Astro.props;
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,9 +12,11 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<link rel="stylesheet" href="/css/global.css" />
+		<title>{pageTitle}</title>
 	</head>
 	<body>
+		<Header />
 		<slot />
 	</body>
 </html>
