--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,17 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Layout from '@layouts/Layout.astro';
+import Main from '@components/home-page/Main.astro';
+import Marquee from '@components/Marquee.astro';
+import Updates from '@components/home-page/Updates.astro';
+import UpcomingEvents from '@components/home-page/UpcomingEvents.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+// Page title and metadata
+const pageTitle = "Home | FCSC";
 ---
 
-<Layout>
-	<Welcome />
+<Layout pageTitle={pageTitle}>
+	<Main />
+	<Marquee />
+	<Updates client:visible />
+	<UpcomingEvents client:visible />
 </Layout>
