--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,6 @@ const pageTitle = "Home | FCSC";
 <Layout pageTitle={pageTitle}>
 	<Main />
 	<Marquee />
-	<Updates client:visible />
-	<UpcomingEvents client:visible />
+	<Updates />
+	<UpcomingEvents />
 </Layout>
